# setupvault

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
src/setupvault/: __init__.py  __main__.py
src/setupvault/cli/: app.py  diff_cmd.py  doctor_cmd.py  export_cmd.py  gui_cmd.py  info_cmd.py  list_cmd.py  report_cmd.py  restore_cmd.py  validate_cmd.py
src/setupvault/completions/: setupvault.bash  setupvault.fish  setupvault.zsh
src/setupvault/core/: config.py  exceptions.py  filter.py  merge.py  profile.py  snapshot.py  versions.py
src/setupvault/detectors/: distro.py  dotfiles.py  environment.py  fonts.py  packages.py  shell.py  system.py  themes.py
src/setupvault/distro_adapters/: arch.py  base.py  debian.py  fedora.py  opensuse.py  registry.py  ubuntu.py
src/setupvault/doctor/: checks.py  runner.py
src/setupvault/exporters/: dotfiles_exporter.py  environment_exporter.py  fonts_exporter.py  packages_exporter.py  shell_exporter.py  system_exporter.py  themes_exporter.py
src/setupvault/gui/: __init__.py  app.py  mainwindow.py  pages.py  panels.py  settings.py  styles.py  widgets.py  worker.py
src/setupvault/logging/: config.py
src/setupvault/mappings/: package_map.json  package_mapper.py
src/setupvault/reports/: html_report.py  json_report.py  markdown.py
src/setupvault/restorers/: dotfiles_restorer.py  fonts_restorer.py  packages_restorer.py  themes_restorer.py
src/setupvault/services/: diff_service.py  doctor_service.py  export_service.py  list_service.py  report_service.py  restore_service.py  validate_service.py
src/setupvault/storage/: local.py
src/setupvault/utils/: formatting.py  hashing.py  paths.py  platform.py  shell.py
src/setupvault/validation/: compatibility.py  rules.py  schema.py
src/setupvault/validation/schemas/: snapshot-v1.json
tests/: conftest.py
tests/adapters/: test_arch_adapter.py  test_debian_adapter.py  test_fedora_adapter.py  test_opensuse_adapter.py  test_registry.py  test_third_party.py
tests/benchmarks/: test_snapshot_roundtrip.py
tests/fixtures/snapshots/: valid_full.json  valid_minimal.json
tests/gui/: test_mainwindow.py  test_panels.py  test_widgets.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_cli_diff.py  test_cli_doctor.py  test_cli_export.py  test_cli_info.py  test_cli_list.py  test_cli_report.py  test_cli_restore.py  test_cli_validate.py  test_config.py  test_detector_distro.py  test_detector_dotfiles.py  test_detector_environment.py  test_detector_fonts.py  test_detector_packages.py  test_detector_shell.py  test_detector_system.py  test_detector_themes.py  test_doctor_checks.py  test_doctor_runner.py  test_exceptions.py  test_export_service.py  test_filter.py  test_merge.py  test_package_mapper.py  test_profile.py  test_reports_html.py  test_reports_json.py  test_reports_markdown.py  test_restore_service.py  test_restorer_dotfiles.py  test_restorer_fonts.py  test_restorer_packages.py  test_restorer_themes.py  test_services_diff.py  test_services_doctor.py  test_services_list.py  test_services_report.py  test_services_validate.py  test_snapshot.py  test_storage_local.py  (+4 more)
