[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "setupvault"
version = "0.1.0.dev0"
description = "Cross-distribution Linux setup backup, migration, restoration, and sharing tool"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "SetupVault Contributors" },
]
keywords = ["linux", "backup", "migration", "configuration", "dotfiles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Systems Administration",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "pytest-qt>=4.0",
    "mypy>=1.0",
    "ruff>=0.5",
    "pre-commit>=3.0",
]
gui = [
    "PySide6>=6.5",
]

[project.urls]
Homepage = "https://github.com/anomalyco/setupvault"
Repository = "https://github.com/anomalyco/setupvault"
BugTracker = "https://github.com/anomalyco/setupvault/issues"
Documentation = "https://github.com/anomalyco/setupvault#readme"

[project.scripts]
setupvault = "setupvault.cli.app:main"
setupvault-gui = "setupvault.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["setupvault*"]

[tool.setuptools.package-data]
"setupvault.gui" = ["assets/*.png"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access",
]

[tool.coverage.run]
source = ["setupvault"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["setupvault.gui.*"]
follow_imports = "skip"
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
disable_error_code = ["misc"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "T20"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]
"src/setupvault/cli/*" = ["T201"]
"src/setupvault/gui/*" = ["N802"]
"src/setupvault/reports/html_report.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.towncrier]
package = "setupvault"
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "# Changelog\n\n"
underlines = ["", "", ""]
title_format = "## {version} ({project_date})"
issue_format = "`#{issue}`"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true
